--- a/customer-service-dev.yml
+++ b/customer-service-dev.yml
@@ -8,7 +8,7 @@ spring:
      url: jdbc:mysql://localhost:3306/customer_master
      username: root
      password:
-     driverClassName: com.mysql.cj.jdbc.Driver
+     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
