--- a/customer-service-dev.yml
+++ b/customer-service-dev.yml
@@ -8,11 +8,8 @@ spring:
      url: jdbc:mysql://localhost:3306/customer_master?useSSL=false&serverTimezone=UTC
      username: root
      password:
-     driver-class-name: com.mysql.cj.jdbc.Driver
+     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect  # Optional
+    show-sql: true  
