--- a/customer-service-dev.yml
+++ b/customer-service-dev.yml
@@ -5,7 +5,7 @@ server:
 message: Hello from Dev!
 spring:
   datasource:
-     url: jdbc:mysql://localhost:3306/customer_master?useSSL=false&serverTimezone=UTC
+     url: jdbc:mysql://localhost:3306/customer_master
      username: root
      password:
      driverClassName: com.mysql.cj.jdbc.Driver
