--- a/customer-service-dev.yml
+++ b/customer-service-dev.yml
@@ -5,10 +5,11 @@ server:
 message: Hello from Dev!
 spring:
   datasource:
-     url: jdbc:mysql://localhost:3306/customer_master
-     username: root
-     password:
+     url: jdbc:postgresql://localhost:5432/nikhil_db_test
+     username: postgres
+     password: root
+     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true  
